tests/regression/errors/basic/undefined_var_8.csd
// Undefined variable test 8
vibez.spill("Using undefined:", undefined_var_8)
sus result drip = missing_variable + 8
